jsond_scanner.c
/* Generated by re2c 4.0.2 */
/*
  +----------------------------------------------------------------------+
  | Copyright (c) The PHP Group                                          |
  +----------------------------------------------------------------------+
  | This source file is subject to version 3.01 of the PHP license,      |
  | that is bundled with this package in the file LICENSE, and is        |
  | available through the world-wide-web at the following url:           |
  | http://www.php.net/license/3_01.txt                                  |
  | If you did not receive a copy of the PHP license and are unable to   |
  | obtain it through the world-wide-web, please send a note to          |
  | license@php.net so we can mail you a copy immediately.               |
  +----------------------------------------------------------------------+
  | Author: Jakub Zelenka <bukka@php.net>                                |
  +----------------------------------------------------------------------+
*/

#include "php.h"
#include "php_jsond_scanner.h"
#include "php_jsond_scanner_defs.h"
#include "php_jsond_parser.h"
#include "jsond_parser.tab.h"

#define	YYCTYPE     php_jsond_ctype
#define	YYCURSOR    s->cursor
#define	YYLIMIT     s->limit
#define	YYMARKER    s->marker
#define	YYCTXMARKER s->ctxmarker

#define YYGETCONDITION()        s->state
#define YYSETCONDITION(yystate) s->state = yystate

#define	YYFILL(n)

#define PHP_JSOND_CONDITION_SET(condition) YYSETCONDITION(yyc##condition)
#define PHP_JSOND_CONDITION_GOTO(condition) goto yyc_##condition
#define PHP_JSOND_CONDITION_SET_AND_GOTO(condition) \
	PHP_JSOND_CONDITION_SET(condition); \
	PHP_JSOND_CONDITION_GOTO(condition)
#define PHP_JSOND_CONDITION_GOTO_STR_P2() \
	do { \
		if (s->utf8_invalid) { \
			PHP_JSOND_CONDITION_GOTO(STR_P2_BIN); \
		} else { \
			PHP_JSOND_CONDITION_GOTO(STR_P2_UTF); \
		} \
	} while(0)

#define PHP_JSOND_SCANNER_COPY_ESC() php_jsond_scanner_copy_string(s, 0)
#define PHP_JSOND_SCANNER_COPY_UTF() php_jsond_scanner_copy_string(s, 5)
#define PHP_JSOND_SCANNER_COPY_UTF_SP() php_jsond_scanner_copy_string(s, 11)


static void php_jsond_scanner_copy_string(php_jsond_scanner *s, int esc_size)
{
	size_t len = s->cursor - s->str_start - esc_size - 1;
	if (len) {
		memcpy(s->pstr, s->str_start, len);
		s->pstr += len;
	}
}

static int php_jsond_hex_to_int(char code)
{
	if (code >= '0' && code <= '9') {
		return code - '0';
	} else if (code >= 'A' && code <= 'F') {
		return code - ('A' - 10);
	} else if (code >= 'a' && code <= 'f') {
		return code - ('a' - 10);
	} else {
		/* this should never happened (just to suppress compiler warning) */
		return -1;
	}
}

static int php_jsond_ucs2_to_int_ex(php_jsond_scanner *s, int size, int start)
{
	int i, code = 0;
	php_jsond_ctype *pc = s->cursor - start;
	for (i = 0; i < size; i++) {
		code |= php_jsond_hex_to_int(*(pc--)) << (i * 4);
	}
	return code;
}

static int php_jsond_ucs2_to_int(php_jsond_scanner *s, int size)
{
	return php_jsond_ucs2_to_int_ex(s, size, 1);
}

void php_jsond_scanner_init(php_jsond_scanner *s, char *str, size_t str_len, int options)
{
	s->cursor = (php_jsond_ctype *) str;
	s->limit = (php_jsond_ctype *) str + str_len;
	s->options = options;
	PHP_JSOND_CONDITION_SET(JS);
}

int php_jsond_scan(php_jsond_scanner *s)
{
	ZVAL_NULL(&s->value);
	
std:
	s->token = s->cursor;


	{
		YYCTYPE yych;
		unsigned int yyaccept = 0;
		static const unsigned char yybm_JS[256] = {
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,  64,   0,   0,   0,  64,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			 64,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			128, 128, 128, 128, 128, 128, 128, 128,
			128, 128,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0,
			  0,   0,   0,   0,   0,   0,   0,   0
		};
		if (YYGETCONDITION() < 2) {
			if (YYGETCONDITION() < 1) goto yyc_JS;
			else goto yyc_STR_P1;
		} else {
			if (YYGETCONDITION() < 3) goto yyc_STR_P2_BIN;
			else goto yyc_STR_P2_UTF;
		}
/* *********************************** */
yyc_JS:
		yych = *YYCURSOR;
		if (yych <= ']') {
			if (yych <= '"') {
				if (yych <= '\f') {
					if (yych <= 0x08) {
						if (yych >= 0x01) goto yy1;
					} else {
						if (yych <= '\t') goto yy2;
						if (yych <= '\n') goto yy5;
						goto yy1;
					}
				} else {
					if (yych <= 0x1F) {
						if (yych <= '\r') goto yy6;
						goto yy1;
					} else {
						if (yych <= ' ') goto yy2;
						if (yych <= '!') goto yy7;
						goto yy9;
					}
				}
			} else {
				if (yych <= '0') {
					if (yych <= ',') {
						if (yych <= '+') goto yy7;
						goto yy10;
					} else {
						if (yych <= '-') goto yy11;
						if (yych <= '/') goto yy7;
						goto yy12;
					}
				} else {
					if (yych <= 'Z') {
						if (yych <= '9') goto yy14;
						if (yych <= ':') goto yy15;
						goto yy7;
					} else {
						if (yych <= '[') goto yy16;
						if (yych <= '\\') goto yy7;
						goto yy17;
					}
				}
			}
		} else {
			if (yych <= '}') {
				if (yych <= 's') {
					if (yych <= 'f') {
						if (yych <= 'e') goto yy7;
						goto yy18;
					} else {
						if (yych == 'n') goto yy19;
						goto yy7;
					}
				} else {
					if (yych <= 'z') {
						if (yych <= 't') goto yy20;
						goto yy7;
					} else {
						if (yych <= '{') goto yy21;
						if (yych <= '|') goto yy7;
						goto yy22;
					}
				}
			} else {
				if (yych <= 0xEC) {
					if (yych <= 0xC1) {
						if (yych <= 0x7F) goto yy7;
						goto yy23;
					} else {
						if (yych <= 0xDF) goto yy25;
						if (yych <= 0xE0) goto yy26;
						goto yy27;
					}
				} else {
					if (yych <= 0xF0) {
						if (yych <= 0xED) goto yy28;
						if (yych <= 0xEF) goto yy27;
						goto yy29;
					} else {
						if (yych <= 0xF3) goto yy30;
						if (yych <= 0xF4) goto yy31;
						goto yy23;
					}
				}
			}
		}
		++YYCURSOR;
		{
		if (s->limit < s->cursor) {
			return PHP_JSOND_T_EOI;
		} else {
			s->errcode = PHP_JSOND_ERROR_CTRL_CHAR;
			return PHP_JSOND_T_ERROR;
		}
	}
yy1:
		++YYCURSOR;
		{
		s->errcode = PHP_JSOND_ERROR_CTRL_CHAR;
		return PHP_JSOND_T_ERROR;
	}
yy2:
		yych = *++YYCURSOR;
yy3:
		if (yybm_JS[0+yych] & 64) goto yy2;
yy4:
		{ goto std; }
yy5:
		++YYCURSOR;
		goto yy4;
yy6:
		yych = *++YYCURSOR;
		if (yych == '\n') goto yy5;
		goto yy3;
yy7:
		++YYCURSOR;
yy8:
		{
		s->errcode = PHP_JSOND_ERROR_SYNTAX;
		return PHP_JSOND_T_ERROR;
	}
yy9:
		++YYCURSOR;
		{
		s->str_start = s->cursor;
		s->str_esc = 0;
		s->utf8_invalid = 0;
		s->utf8_invalid_count = 0;
		PHP_JSOND_CONDITION_SET_AND_GOTO(STR_P1);
	}
yy10:
		++YYCURSOR;
		{ return ','; }
yy11:
		yych = *++YYCURSOR;
		if (yych <= '/') goto yy8;
		if (yych <= '0') goto yy12;
		if (yych <= '9') goto yy14;
		goto yy8;
yy12:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= 'D') {
			if (yych == '.') goto yy32;
		} else {
			if (yych <= 'E') goto yy34;
			if (yych == 'e') goto yy34;
		}
yy13:
		{
		zend_bool bigint = 0, negative = s->token[0] == '-';
		size_t digits = (size_t) (s->cursor - s->token - negative);
		if (digits >= PHP_JSOND_INT_MAX_LENGTH) {
			if (digits == PHP_JSOND_INT_MAX_LENGTH) {
				int cmp = strncmp((char *) (s->token + negative), PHP_JSOND_INT_MAX_DIGITS, PHP_JSOND_INT_MAX_LENGTH);
				if (!(cmp < 0 || (cmp == 0 && negative))) {
					bigint = 1;
				}
			} else {
				bigint = 1;
			}
		}
		if (!bigint) {
			ZVAL_LONG(&s->value, strtol((char *) s->token, NULL, 10));
			return PHP_JSOND_T_INT;
		} else if (s->options & PHP_JSOND_BIGINT_AS_STRING) {
			ZVAL_STRINGL(&s->value, (char *) s->token, s->cursor - s->token);
			return PHP_JSOND_T_STRING;
		} else {
			ZVAL_DOUBLE(&s->value, zend_strtod((char *) s->token, NULL));
			return PHP_JSOND_T_DOUBLE;
		}
	}
yy14:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yybm_JS[0+yych] & 128) goto yy14;
		if (yych <= 'D') {
			if (yych == '.') goto yy32;
			goto yy13;
		} else {
			if (yych <= 'E') goto yy34;
			if (yych == 'e') goto yy34;
			goto yy13;
		}
yy15:
		++YYCURSOR;
		{ return ':'; }
yy16:
		++YYCURSOR;
		{ return '['; }
yy17:
		++YYCURSOR;
		{ return ']'; }
yy18:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych == 'a') goto yy35;
		goto yy8;
yy19:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych == 'u') goto yy36;
		goto yy8;
yy20:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych == 'r') goto yy37;
		goto yy8;
yy21:
		++YYCURSOR;
		{ return '{'; }
yy22:
		++YYCURSOR;
		{ return '}'; }
yy23:
		++YYCURSOR;
yy24:
		{
		s->errcode = PHP_JSOND_ERROR_UTF8;
		return PHP_JSOND_T_ERROR;
	}
yy25:
		yych = *++YYCURSOR;
		if (yych <= 0x7F) goto yy24;
		if (yych <= 0xBF) goto yy7;
		goto yy24;
yy26:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= 0x9F) goto yy24;
		if (yych <= 0xBF) goto yy38;
		goto yy24;
yy27:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= 0x7F) goto yy24;
		if (yych <= 0xBF) goto yy38;
		goto yy24;
yy28:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= 0x7F) goto yy24;
		if (yych <= 0x9F) goto yy38;
		goto yy24;
yy29:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= 0x8F) goto yy24;
		if (yych <= 0xBF) goto yy39;
		goto yy24;
yy30:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= 0x7F) goto yy24;
		if (yych <= 0xBF) goto yy39;
		goto yy24;
yy31:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= 0x7F) goto yy24;
		if (yych <= 0x8F) goto yy39;
		goto yy24;
yy32:
		yych = *++YYCURSOR;
		if (yych <= '/') goto yy33;
		if (yych <= '9') goto yy40;
yy33:
		YYCURSOR = YYMARKER;
		if (yyaccept <= 1) {
			if (yyaccept == 0) goto yy13;
			else goto yy8;
		} else {
			if (yyaccept == 2) goto yy24;
			else goto yy41;
		}
yy34:
		yych = *++YYCURSOR;
		if (yych <= ',') {
			if (yych == '+') goto yy42;
			goto yy33;
		} else {
			if (yych <= '-') goto yy42;
			if (yych <= '/') goto yy33;
			if (yych <= '9') goto yy43;
			goto yy33;
		}
yy35:
		yych = *++YYCURSOR;
		if (yych == 'l') goto yy44;
		goto yy33;
yy36:
		yych = *++YYCURSOR;
		if (yych == 'l') goto yy45;
		goto yy33;
yy37:
		yych = *++YYCURSOR;
		if (yych == 'u') goto yy46;
		goto yy33;
yy38:
		yych = *++YYCURSOR;
		if (yych <= 0x7F) goto yy33;
		if (yych <= 0xBF) goto yy7;
		goto yy33;
yy39:
		yych = *++YYCURSOR;
		if (yych <= 0x7F) goto yy33;
		if (yych <= 0xBF) goto yy38;
		goto yy33;
yy40:
		yyaccept = 3;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= 'D') {
			if (yych <= '/') goto yy41;
			if (yych <= '9') goto yy40;
		} else {
			if (yych <= 'E') goto yy34;
			if (yych == 'e') goto yy34;
		}
yy41:
		{
		ZVAL_DOUBLE(&s->value, zend_strtod((char *) s->token, NULL));
		return PHP_JSOND_T_DOUBLE;
	}
yy42:
		yych = *++YYCURSOR;
		if (yych <= '/') goto yy33;
		if (yych >= ':') goto yy33;
yy43:
		yych = *++YYCURSOR;
		if (yych <= '/') goto yy41;
		if (yych <= '9') goto yy43;
		goto yy41;
yy44:
		yych = *++YYCURSOR;
		if (yych == 's') goto yy47;
		goto yy33;
yy45:
		yych = *++YYCURSOR;
		if (yych == 'l') goto yy48;
		goto yy33;
yy46:
		yych = *++YYCURSOR;
		if (yych == 'e') goto yy49;
		goto yy33;
yy47:
		yych = *++YYCURSOR;
		if (yych == 'e') goto yy50;
		goto yy33;
yy48:
		++YYCURSOR;
		{
		ZVAL_NULL(&s->value);
		return PHP_JSOND_T_NUL;
	}
yy49:
		++YYCURSOR;
		{
		ZVAL_TRUE(&s->value);
		return PHP_JSOND_T_TRUE;
	}
yy50:
		++YYCURSOR;
		{
		ZVAL_FALSE(&s->value);
		return PHP_JSOND_T_FALSE;
	}
/* *********************************** */
yyc_STR_P1:
		yych = *YYCURSOR;
		if (yych <= 0xDF) {
			if (yych <= '[') {
				if (yych <= 0x1F) goto yy52;
				if (yych == '"') goto yy54;
				goto yy53;
			} else {
				if (yych <= '\\') goto yy55;
				if (yych <= 0x7F) goto yy53;
				if (yych <= 0xC1) goto yy57;
				goto yy59;
			}
		} else {
			if (yych <= 0xEF) {
				if (yych <= 0xE0) goto yy60;
				if (yych == 0xED) goto yy62;
				goto yy61;
			} else {
				if (yych <= 0xF0) goto yy63;
				if (yych <= 0xF3) goto yy64;
				if (yych <= 0xF4) goto yy65;
				goto yy57;
			}
		}
yy52:
		++YYCURSOR;
		{
		s->errcode = PHP_JSOND_ERROR_CTRL_CHAR;
		return PHP_JSOND_T_ERROR;
	}
yy53:
		++YYCURSOR;
		{ PHP_JSOND_CONDITION_GOTO(STR_P1); }
yy54:
		++YYCURSOR;
		{
		zend_string *str;
		size_t len = s->cursor - s->str_start - s->str_esc - 1 + s->utf8_invalid_count;
		if (len == 0) {
			PHP_JSOND_CONDITION_SET(JS);
			ZVAL_EMPTY_STRING(&s->value);
